tests/snapshots/integration_test__excluding_dryrun_fails.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error:        Config for linter TESTLINTER defines init args but does not take a {{DRYRUN}} argument."

