tests/snapshots/integration_test__init_suppresses_warning.snap
---
source: tests/integration_test.rs
expression: output_lines

---
- "STDOUT:"
- ok No lint issues.
- ""
- ""
- "STDERR:"

