tests/snapshots/integration_test__invalid_config_fails-2.snap
---
source: tests/integration_test.rs
expression: "std::str::from_utf8(&output.stdout)?.lines().collect::<Vec<_>>()"

---
[]

