tests/snapshots/integration_test__invalid_paths_cmd_and_from.snap
---
source: tests/integration_test.rs
expression: output_lines
---
- "STDOUT:"
- ""
- ""
- "STDERR:"
- "error: The argument '--paths-cmd <PATHS_CMD>' cannot be used with '--paths-from <PATHS_FROM>'"
- ""
- "USAGE:"
- "    lintrunner --configs <CONFIGS>... --paths-cmd <PATHS_CMD>"
- ""
- For more information try --help

