tests/snapshots/integration_test__malformed_command_fails.snap
---
source: tests/integration_test.rs
expression: "std::str::from_utf8(&output.stderr)?.lines().collect::<Vec<_>>()"

---
- "error:        Invalid linter configuration: 'TESTLINTER' has an empty command list."

